--- a/src/main/js/html/intake.html
+++ b/src/main/js/html/intake.html
@@ -11,12 +11,13 @@
               <label>Referral Date</label>
               <div data-dd4-datepicker data-ng-model="$ctrl.patient.referralDate"></div>
             </div>
-            <p class="colx2-right">
-              <label for="referralSourceId">Referral Source</label>
-              <select data-ng-model="$ctrl.patient.referralSourceId" id="referralSourceId" class="full-width"
-                      data-ng-options="vendor.id as vendor.name for vendor in $ctrl.vendors | orderBy:'name'">
-              </select>
-            </p>
+            <div class="colx2-right">
+              <label for="referralSource">Referral Source</label>
+              <input type="text" id="referralSource" list="referralSourceList" data-ng-model="$ctrl.patient.referralSource" class="full-width">
+              <datalist id="referralSourceList">
+                <option data-ng-repeat="vendor in $ctrl.vendors | orderBy:'name'" value="{{vendor.name}}"></option>
+              </datalist>
+            </div>
           </div>
           <div class="columns">
             <div class="colx2-left">
@@ -34,29 +35,39 @@
               <div data-dd4-datepicker data-ng-model="$ctrl.patient.dateOfBirth" id="dateOfBirth"></div>
             </div>
             <div class="colx2-right">
-              <label for="diagnosisId">Diagnosis</label>
-              <select data-ng-model="$ctrl.patient.diagnosisId" id="diagnosisId" class="full-width"
-                      data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.DIAGNOSIS) | orderBy:'name'">
-              </select>
+              <label for="diagnosis">Diagnosis</label>
+              <input type="text" id="diagnosis" list="diagnosisList" data-ng-model="$ctrl.patient.diagnosis" class="full-width">
+              <datalist id="diagnosisList">
+                <option data-ng-repeat="gd in generalDataService.list(GeneralData.DIAGNOSIS) | orderBy:'name'"
+                        value="{{gd.name}}"></option>
+              </datalist>
             </div>
           </div>
           <div class="columns">
-            <p class="colx3-left">
-              <label for="therapyTypeId">Therapy Type</label>
-              <select data-ng-model="$ctrl.patient.therapyTypeId" id="therapyTypeId" class="full-width"
-                      data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.THERAPY_TYPE) | orderBy:'name'">
-              </select>
-            </p>
+            <div class="colx3-left">
+              <label for="therapyType">Therapy Type</label>
+              <input type="text" id="therapyType" list="therapyTypeList" data-ng-model="$ctrl.patient.therapyType" class="full-width">
+              <datalist id="therapyTypeList">
+                <option data-ng-repeat="gd in generalDataService.list(GeneralData.THERAPY_TYPE) | orderBy:'name'"
+                        value="{{gd.name}}"></option>
+              </datalist>
+            </div>
             <div class="colx3-center">
               <label for="rx">Pt Rx</label>
-              <input type="text" data-ng-model="$ctrl.patient.rx" id="rx" class="full-width">
+              <input type="text" id="rx" list="rxList" data-ng-model="$ctrl.patient.rx" class="full-width">
+              <datalist id="rxList">
+                <option data-ng-repeat="gd in generalDataService.list(GeneralData.RX) | orderBy:'name'"
+                        value="{{gd.name}}"></option>
+              </datalist>
             </div>
-            <p class="colx3-right">
-              <label for="ivAccessId">IV Access</label>
-              <select data-ng-model="$ctrl.patient.ivAccessId" id="ivAccessId" class="full-width"
-                      data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.IV_ACCESS) | orderBy:'name'">
-              </select>
-            </p>
+            <div class="colx3-right">
+              <label for="ivAccess">IV Access</label>
+              <input type="text" id="ivAccess" list="ivAccessList" data-ng-model="$ctrl.patient.ivAccess" class="full-width">
+              <datalist id="ivAccessList">
+                <option data-ng-repeat="gd in generalDataService.list(GeneralData.IV_ACCESS) | orderBy:'name'"
+                        value="{{gd.name}}"></option>
+              </datalist>
+            </div>
           </div>
           <div class="columns">
             <div class="colx3-left">
@@ -77,26 +88,26 @@
             </div>
           </div>
           <div class="columns">
-            <p class="colx3-left">
+            <div class="colx3-left">
               <label for="billingVendorId" class="required">Billing</label>
               <select data-ng-model="$ctrl.patient.billingVendorId" id="billingVendorId" class="full-width"
                       data-ng-options="vendor.id as vendor.name for vendor in $ctrl.vendors | orderBy:'name'">
               </select>
-            </p>
-            <p class="colx3-center">
+            </div>
+            <div class="colx3-center">
               <label for="primaryPhoneNumber">Primary Phone Number</label>
               <input type="text" data-ng-model="$ctrl.patient.primaryPhone.number" id="primaryPhoneNumber" size="14">
               <select data-ng-model="$ctrl.patient.primaryPhone.typeId" id="primaryPhoneTypeId"
                       data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.PHONE_TYPE) | orderBy:'rank'">
               </select>
-            </p>
-            <p class="colx3-right">
+            </div>
+            <div class="colx3-right">
               <label for="alternatePhoneNumber">Alt Contact Number</label>
               <input type="text" data-ng-model="$ctrl.patient.alternatePhone.number" id="alternatePhoneNumber" size="14">
               <select data-ng-model="$ctrl.patient.alternatePhone.typeId" id="alternatePhoneTypeId"
                       data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.PHONE_TYPE) | orderBy:'rank'">
               </select>
-            </p>
+            </div>
           </div>
           <div class="columns">
             <div class="colx2-left">
@@ -109,22 +120,23 @@
             </div>
           </div>
           <div class="columns">
-            <p class="colx3-left">
+            <div class="colx3-left">
               <label for="emergencyContact">Emergency Contact</label>
               <input type="text" data-ng-model="$ctrl.patient.emergencyContact" id="emergencyContact" class="full-width">
-            </p>
-            <p class="colx3-center">
+            </div>
+            <div class="colx3-center">
               <label for="emergencyContactPhoneNumber">Emergency Contact Number</label>
               <input type="text" data-ng-model="$ctrl.patient.emergencyContactPhone.number" id="emergencyContactPhoneNumber" size="14">
               <select data-ng-model="$ctrl.patient.emergencyContactPhone.typeId" id="emergencyContactPhoneTypeId"
                       data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.PHONE_TYPE) | orderBy:'rank'">
               </select>
-            </p>
+            </div>
           </div>
           <div class="columns">
             <div class="colx3-left">
-              <p><span class="label">Labs? [Frequency]</span><input type="checkbox">
-                <input type="text" data-ng-model="$ctrl.patient.labsFrequency" id="labsFrequency"></p>
+              <div><span class="label">Labs? [Frequency]</span><input type="checkbox">
+                <input type="text" data-ng-model="$ctrl.patient.labsFrequency" id="labsFrequency">
+              </div>
             </div>
             <div class="colx3-center">
               <label>1st Re-certification</label>
@@ -140,10 +152,10 @@
               <label for="infoInSOS">PT Info in SOS?</label>
               <input type="checkbox" class="full-width" data-ng-model="$ctrl.patient.infoInSOS" id="infoInSOS">
             </div>
-            <p class="colx3-right-double">
+            <div class="colx3-right-double">
               <label for="schedulingPreference">Scheduling Preference</label>
               <input type="text" data-ng-model="$ctrl.patient.schedulingPreference" id="schedulingPreference" class="full-width">
-            </p>
+            </div>
           </div>
           <label for="referralNote">Notes</label>
           <textarea data-ng-model="$ctrl.patient.referralNote" id="referralNote" rows="10" class="full-width">
@@ -154,31 +166,31 @@
           <legend>Referral Status</legend>
           <div class="columns">
             <div class="colx3-left">
-              <p>
+              <div>
                 <span class="label">Accepted?</span>
                 <input type="radio" name="accepted[]" id="accepted-1" value="1">&nbsp;<label for="accepted-1">Yes</label>
                 <input type="radio" name="accepted[]" id="accepted-2" value="2">&nbsp;<label for="accepted-2">No</label>
-              </p>
+              </div>
             </div>
-            <p class="colx3-right-double">
+            <div class="colx3-right-double">
               <label for="explain">Explain:</label> <input type="TEXT" name="explain" id="explain" class="full-width">
-            </p>
+            </div>
           </div>
 
-          <p>
+          <div>
             <span class="label"></span>
             <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-1" value="1">&nbsp;<label for="simple-checkbox-1">Confirmed w/ Vendor</label>
             <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-2" value="2">&nbsp;<label for="simple-checkbox-2">Confirmed w/ Nurse</label>
             <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-3" value="2">&nbsp;<label for="simple-checkbox-2">Sent Patient Info</label>
             <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-4" value="2">&nbsp;<label for="simple-checkbox-2">Added to Calendar</label>
-          </p>
+          </div>
           <div class="columns">
             <div class="colx2-left">
-              <p>
+              <div>
                 <span class="label"></span>
                 <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-1" value="1">&nbsp;<label for="simple-checkbox-1">Patient Confirmed</label>
                 <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-2" value="2">&nbsp;<label for="simple-checkbox-2">Meds Delivered?</label>
-              </p>
+              </div>
             </div>
             <p class="colx2-right">
               <label>Anticipated Delivery Date:</label>
@@ -189,14 +201,14 @@
         <div data-ng-if="$ctrl.errorMessage" class="message error">{{$ctrl.errorMessage}}</div>
         <fieldset class="grey-bg no-margin">
           <legend>Action on create</legend>
-          <p class="input-with-button">
+          <div class="input-with-button">
             <label for="simple-action">Select action</label>
             <select name="simple-action" id="simple-action">
               <option value="1">Save and accept</option>
               <option value="2" selected="">Save only</option>
             </select>
             <button data-ng-click="$ctrl.create()">Create</button>
-          </p>
+          </div>
         </fieldset>
       </div>
     </div>
